Correct wrong padding

--- a/packages/social-trader/src/components/table/components/table-cards.scss
+++ b/packages/social-trader/src/components/table/components/table-cards.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding-left: 0 $padding-xsmall;
+  padding-left: 0;
 
   @include media-breakpoint-landscape-phone() {
     padding-left: $padding-small;
